Improve comment, now you can't post comment to inexiten song
