# src/controllers/comment.controller.js
@@ -1,21 +1,25 @@
+const { ValidationError } = require('sequelize');
 const commentService = require('../service/comment.service');
-
-async function createCommentResponse(req, res) {
-  const { commetnId, user, message } = req.body;
-  try {
-    const comentario = await commentService.addResponseToComment(commetnId, user, message);
-    res.status(204).send();
-  } catch (error) {
-    res.status(500).json({ error: error.message });
-  }
-}
+const { NonexistentSong } = require('../service/exceptions/exceptions');
 
 async function createComment(req, res) {
-  const { song_id, user, message } = req.body;
+  if (!req.user) {
+    return res.status(401).json({ error: 'Unauthorized: No user info in request' });
+  }
+  const {id, username }= req.user;
+  const { song_id, message } = req.body;
   try {
-    const comentario = await commentService.createComment(song_id, user, message);
+    await commentService.createComment(song_id, username, message, id );
     res.status(204).send();
   } catch (error) {
+    if (error instanceof ValidationError) {
+      return res.status(400).json({ error: error.message });
+
+    }
+    if (error instanceof NonexistentSong) {
+      return res.status(error.statusCode).json({ error: error.message });
+
+    }
     res.status(500).json({ error: error.message });
   }
 }
@@ -58,9 +62,21 @@ async function addResponseToComment(req, res) {
 }
 
 async function deleteComment(req, res) {
-  const { id } = req.params;
+  const commentId = req.params.id;
+  const {id:userId, role: userIdRol }= req.user;
+
   try {
-    const comentarioEliminado = await commentService.deleteComment(id);
+    const comment = await commentService.getRawCommentAuthorId(commentId);
+
+     if (!comment) {
+      return res.status(404).json({ message: 'Comentario no encontrado' });
+    }
+
+    if (comment.author_id !== userId && userIdRol !== 2) {
+      return res.status(403).json({ message: 'No tienes permiso para eliminar este comentario' });
+    }
+
+    const comentarioEliminado = await commentService.deleteComment(commentId);
     if (!comentarioEliminado) {
       return res.status(404).json({ message: 'Comentario no encontrado para eliminar' });
     }
